--- a/pharma_deal_django/templates/cart_check.htm
+++ b/pharma_deal_django/templates/cart_check.htm
@@ -29,7 +29,7 @@
                                 <p>Cost : {{co}}</p>
                                 <p>Date : {{date}} &nbsp;</p>
                                 {%if stat == 'pending' %}
-                                <p id="status" style="color: yellow;">Status : Pending</p>
+                                <p id="status" style="color: green;">Status : Pending</p>
                                 {%elif stat == 'accepted' %}
                                 <p id="status" style="color: blue;">Status : Accepted</p>
                                 {%elif stat == 'declined' %}
