--- a/pharma_deal_django/templates/post_check.htm
+++ b/pharma_deal_django/templates/post_check.htm
@@ -23,7 +23,7 @@
                         <p class="card-text">Cost : {{co}}</p>
                         <p class="card-text">Request made at : {{date}} &nbsp;</p>
                         {%if stat == 'pending' %}
-                        <p id="status" style="color: yellow;">Status : Pending</p>
+                        <p id="status" style="color: green;">Status : Pending</p>
                         {%elif stat == 'accepted' %}
                         <p id="status" style="color: blue;">Status : Accepted</p>
                         {%elif stat == 'declined' %}
