--- a/pharma_deal_django/templates/Profile.htm
+++ b/pharma_deal_django/templates/Profile.htm
@@ -90,38 +90,57 @@
     }
 </style>
 
-    {%block content%}
-        <br>
-        <br>
-        <br>
-        <br>
-        <form action="{%url 'showpro'%}" method="POST">
-            {% csrf_token %}
-                <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
-                    
-                    <div class="card p-4 my-2" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); background-color: #aeaeae;"> 
-                        <div class=" image d-flex flex-column justify-content-center align-items-center"> 
-                            <button class="btn btn-secondary"> 
-                                <img src="{{i}}" height="100" width="100" />
-                            </button> 
-                        {% csrf_token %}
-                        <span class="name mt-3">{{n}}</span> 
-	                    <span class="idd">{{priv}}</span>
-                        <div class=" d-flex mt-2"> 
-                            <input type="file" name="files[]" id="files" required>
-                            <input type="hidden" name="url" id="url">
-                            <button class="btn1 btn-dark" type="button" onclick="uploadimage()" name="prof"><i class="fa fa-upload" aria-hidden="true"></i>                                Upload</button> 
-                        </div>
-                        <div class=" d-flex mt-2">     
-                            <input class="btn1 btn-dark" type="submit" value="Change" name="prof"> &#160;&#160;
-                            <button class="btn1 btn-dark" type="button" onclick="resetPassword()" >Reset Password</button>
-                        </div>
-                    </div>
+{%block content%}
+<br>
+<br>
+<br>
+<br>
+<form action="{%url 'showpro'%}" method="POST">
+    {% csrf_token %}
+    <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
+
+        <div class="card p-4 my-2" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); background-color: #aeaeae;">
+            <div class=" image d-flex flex-column justify-content-center align-items-center">
+                <button class="btn btn-secondary">
+                    <img src="{{i}}" height="200" width="200" />
+                </button>
+                {% csrf_token %}
+
+                <span class="name mt-3" style="background-color : white;">
+                    <h4>
+                        <b>Name :{{n}}</b>
+                    </h4>
+                </span>
+                <span class="idd" style="background-color : white;">
+                    <h4>
+                        <b>Account:{{priv}}</b>
+                    </h4>
+                </span>
+                <div class=" d-flex mt-2">
+                    <input type="file" name="files[]" id="files" required>
+                    <input type="hidden" name="url" id="url">
+                    <button class="btn1 btn-dark" type="button" onclick="uploadimage()" name="prof">
+                        <i class="fa fa-upload" aria-hidden="true"></i> Upload</button>
+                    <br>
+
+                    <input class="btn1 btn-dark" type="submit" value="Change" name="prof"> &#160;&#160;
                 </div>
-        </form>
-        <br>
-        <br>
-    {% endblock %}
+                <div class=" d-flex mt-2">
+
+
+
+                </div>
+                <div class=" d-flex mt-2">
+                    <button class="btn1 btn-dark" type="button" onclick="resetPassword()">Reset Password</button>
+                    <br>
+                    <br>
+
+                </div>
+            </div>
+        </div>
+</form>
+<br>
+<br>
 
 
 
@@ -187,9 +206,6 @@
     }
 
 
-</script>
-
-
-
+</script> {% endblock %}
 
 </html>
