--- a/pharma_deal_django/templates/login.html
+++ b/pharma_deal_django/templates/login.html
@@ -1,6 +1,8 @@
+{% load static %}
 <html>
 <head>
   <meta charset="utf-8">
+  <link rel="shortcut icon" href="{% static 'images/favicon.ico' type='image/x-icon' %}">
   <title>PharmaDeal: Sign in</title>
   <style type="text/css">
         * {
