--- a/pharma_deal_django/templates/filtered_results.html
+++ b/pharma_deal_django/templates/filtered_results.html
@@ -130,21 +130,21 @@
   {%else%}
   {% for search_result in filtered_results %}
   <div class="col-lg-4 col-md-6 filter-app wow fadeInUp">
-  <div class="card my-2" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2) ">
+    <div class="card my-2" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2) ">
    <p><img class="card-img-top" src="{{search_result.product_image}}" style="height: 200px; width:200px;"></p>
-   <div class="card-body"> 
+   <div class="card-body">
     <div id="contents">
    <p> Name: {{search_result.product_name}} </p>
-   <p> Description: {{search_result.description}} </p>
+   <!--<p> Description: {{search_result.description}} </p>-->
    <p>Brand: {{search_result.brand}}</p>
-   <p>Manufacturing company: {{search_result.manufacturing_company}}</p>
-   <p>Form of preparation: {{search_result.form_of_preparation}}</p>
+  <!-- <p>Manufacturing company: {{search_result.manufacturing_company}}</p>-->
+   <!--<p>Form of preparation: {{search_result.form_of_preparation}}</p>-->
    <p> Category: {{search_result.category}} </p>
    <p> Price: {{search_result.price}} </p>
-   <p> Manufacturing date: {{search_result.manufacturing_date}} </p>
-   <p> Expiry date: {{search_result.expiry_date}}</p>
-   </div>
-   
+   <!--<p> Manufacturing date: {{search_result.manufacturing_date}} </p>
+   <p> Expiry date: {{search_result.expiry_date}}</p>-->
+  </div>
+</div> 
 </div>
 </div>
  <br>
