--- a/pharma_deal_django/templates/single_product.html
+++ b/pharma_deal_django/templates/single_product.html
@@ -7,31 +7,34 @@
     <div class="row portfolio-container">
         <div class="col-lg-6 col-md-8 mx-auto filter-app wow fadeInUp">
             <div class=" card my-2" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2)">
-                <img class="card-img-top" src="{{product.product_image}}" style="height:200px;width: 200px;align-self: center;" >
+                {% for pro in product.values %}
+                <img class="card-img-top" src="{{pro.product_image}}" style="height:200px;width: 200px;align-self: center;" >
                 <div class="card-body"> 
-                    <p>Name: {{product.product_name}} </p>
-                    <p>Description: {{product.description}} </p>
-                    <p>Brand: {{product.brand}}</p>
-                    <p>Manufacturing company: {{product.manufacturing_company}}</p>
-                    <p>Form of preparation: {{product.form_of_preparation}}</p>
-                    <p>Category: {{product.category}} </p>
-                    <p>Price: {{product.price}} </p>
-                    <p>Manufacturing date: {{product.manufacturing_date}} </p>
-                    <p>Expiry date: {{product.expiry_date}}</p>
+                    <p>Name: {{pro.product_name}} </p>
+                    <p>Description: {{pro.description}} </p>
+                    <p>Brand: {{pro.brand}}</p>
+                    <p>Manufacturing company: {{pro.manufacturing_company}}</p>
+                    <p>Form of preparation: {{pro.form_of_preparation}}</p>
+                    <p>Category: {{pro.category}} </p>
+                    <p>Price: {{pro.price}} </p>
+                    <p>Manufacturing date: {{pro.manufacturing_date}} </p>
+                    <p>Expiry date: {{pro.expiry_date}}</p>
                     <br>
                     {% if request.session.privilege == 'pharmacies'%}
                   <form action="{%url 'post_create'%}" method="POST" id="Addtocart">
                     {% csrf_token %} 
-                    <input type="hidden" name="url" value="{{product.product_image}}">
-                    <input type="hidden" name="medicine" value="{{product.product_name}}">
-                    <input type="hidden" name="distributor" value="{{product.user_id}}">
-                    <input type="hidden" name="product_id" value="{{product.product_id}}">      
-                    <input type="hidden" name="cost" value="{{product.price}}">
+                    <input type="hidden" name="url" value="{{pro.product_image}}">
+                    <input type="hidden" name="medicine" value="{{pro.product_name}}">
+                    <input type="hidden" name="distributor" value="{{pro.user_id}}">
+                    <input type="hidden" name="product_id" value="{{pro.product_id}}">      
+                    <input type="hidden" name="cost" value="{{pro.price}}">
                     <button class="btn btn-primary"  type="submit"><i class="fa fa-cart-plus" aria-hidden="true"></i>  Add to cart</button>
                   </form>
                   {%endif%}
                 </div>
+                {%endfor%}
             </div>
+            
             <br>
             <h2 class="h2 mx-auto">Reviews</h2>
             <br>
@@ -65,6 +68,7 @@
                 </div>
             </div>
             {%endfor%}
+            
         </div>
     </div>              
 {%endblock%}
